--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button>Accedi</button>
 
         </div>
-        <div class="jumbotron section">
+        <div class="jumbotron">
             <div class="jumbo-content"></div>
         </div>
 
