added twin sections

--- a/index.html
+++ b/index.html
@@ -34,6 +34,30 @@
     </header>
 
     <body>
+        <main>
+            <div class="container">
+
+                <!-- 3 Sezioni simili  -->
+                <div class="section odd">
+                    <div class="section-body">
+                        <div class="left-content"></div>
+                        <div class="right-content"></div>
+                    </div>
+                </div>
+                <div class="section even">
+                    <div class="section-body switch">
+                        <div class="left-content"></div>
+                        <div class="right-content"></div>
+                    </div>
+                </div>
+                <div class="section odd">
+                    <div class="section-body">
+                        <div class="left-content"></div>
+                        <div class="right-content"></div>
+                    </div>
+                </div>
+            </div>
+        </main>
 
     </body>
     <main>
