Added last main section

--- a/index.html
+++ b/index.html
@@ -33,35 +33,37 @@
 
     </header>
 
-    <body>
-        <main>
-            <div class="container">
+    <main>
+        <div class="container">
 
-                <!-- 3 Sezioni simili  -->
-                <div class="section odd">
-                    <div class="section-body">
-                        <div class="left-content"></div>
-                        <div class="right-content"></div>
-                    </div>
-                </div>
-                <div class="section even">
-                    <div class="section-body switch">
-                        <div class="left-content"></div>
-                        <div class="right-content"></div>
-                    </div>
-                </div>
-                <div class="section odd">
-                    <div class="section-body">
-                        <div class="left-content"></div>
-                        <div class="right-content"></div>
-                    </div>
+            <!-- 3 Sezioni simili  -->
+            <div class="section">
+                <div class="section-body">
+                    <div class="left-content"></div>
+                    <div class="right-content"></div>
                 </div>
             </div>
-        </main>
+            <div class="section">
+                <div class="section-body switch">
+                    <div class="left-content"></div>
+                    <div class="right-content"></div>
+                </div>
+            </div>
+            <div class="section">
+                <div class="section-body">
+                    <div class="left-content"></div>
+                    <div class="right-content"></div>
+                </div>
+            </div>
 
-    </body>
-    <main>
+            <!-- Last bigger body section -->
 
+            <div class="section last-section">
+                <div class="section-body" id="btm-sec"></div>
+            </div>
+
+
+        </div>
     </main>
 
 </body>
