--- a/index.html
+++ b/index.html
@@ -61,10 +61,32 @@
             <div class="section last-section">
                 <div class="section-body" id="btm-sec"></div>
             </div>
-
-
         </div>
     </main>
+
+    <!-- Footer -->
+
+    <footer>
+        <div class="footer-container">
+
+            <div class="upper-footer">
+                <div class="social"></div>
+                <div class="btm-menu">
+                    <div class="column-menu"></div>
+                    <div class="column-menu"></div>
+                    <div class="column-menu"></div>
+                    <div class="column-menu"></div>
+                </div>
+            </div>
+
+            <div class="lower-footer">
+
+                <img src="#" alt="discord-logo">
+                <button>Registrati</button>
+
+            </div>
+        </div>
+    </footer>
 
 </body>
 
