--- a/index.html
+++ b/index.html
@@ -67,24 +67,21 @@
     <!-- Footer -->
 
     <footer>
-        <div class="footer-container">
 
-            <div class="upper-footer">
-                <div class="social"></div>
-                <div class="btm-menu">
-                    <div class="column-menu"></div>
-                    <div class="column-menu"></div>
-                    <div class="column-menu"></div>
-                    <div class="column-menu"></div>
-                </div>
-            </div>
-
-            <div class="lower-footer">
-
-                <img src="#" alt="discord-logo">
-                <button>Registrati</button>
+        <div class="upper-footer">
+            <div class="social"></div>
+            <div class="btm-menu">
+                <div class="column-menu"></div>
+                <div class="column-menu"></div>
+                <div class="column-menu"></div>
+                <div class="column-menu"></div>
 
             </div>
+        </div>
+
+        <div class="lower-footer">
+            <img src="" alt="logo discord">
+            <button>Iscriviti</button>
         </div>
     </footer>
 
