--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="GiovanniZumbo">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
-
 </head>
 
 <body>
@@ -37,6 +36,7 @@
         <div class="container">
 
             <!-- 3 Sezioni simili  -->
+
             <div class="section">
                 <div class="section-body">
                     <div class="left-content"></div>
@@ -67,7 +67,6 @@
     <!-- Footer -->
 
     <footer>
-
         <div class="upper-footer">
             <div class="social"></div>
             <div class="btm-menu">
@@ -75,16 +74,13 @@
                 <div class="column-menu"></div>
                 <div class="column-menu"></div>
                 <div class="column-menu"></div>
-
             </div>
         </div>
-
         <div class="lower-footer">
             <img src="" alt="logo discord">
             <button>Iscriviti</button>
         </div>
     </footer>
-
 </body>
 
 </html>
